public/stylesheets/style.css
/*
 * Color Scheme

 Orange: #e96909
 		lighter x1: #f68b28
 		lighter x2: #ffa94d
 		darker x1: #c54f02
 		darker x2: #a13c00

 	Green: #67701b
 		lighter x1: #868d30
 		lighter x2: #aab053
 		darker x1: #4a560c
 		darker x2: #2b3702

 	Yellow: #fff57f
 		lighter x1: #fff8a9
 		lighter x2: #fffcd3
 		darker x1: #e4ca47
 		darker x2: #c5a322

 	Shadow (from lightest to darkest):
 		#1: #fff8f2
 		#1: #fff1e5
 		#2: #e9dcd1
 		#3: #c2aa96
 		#4: #997d66
 		#5: #654d39
 		#6: #120d08 or rgb(18, 13, 8) (nearly black)
 */
html, body {
	background-color: #fff8f2;
}
/*
 * Custom translucent site header
 */
.site-header {
	background-color: rgba(18, 13, 8, .85);
	-webkit-backdrop-filter: saturate(180%) blur(20px);
	backdrop-filter: saturate(180%) blur(20px);
}
.site-header a {
	color: #c2aa96;
	transition: ease-in-out color .15s;
}
.site-header a:hover {
	color: #e9dcd1;
	text-decoration: none;
}
.container{
	max-width: 1200px;
}
/*TODO optimize this image, it's huge*/
.landing-container{
	background-image: url('../images/landing.jpg');
	background-size: cover;
}
.jumbotron {
	padding-left:1rem;
	padding-right: 1rem;
	margin-bottom: 1rem;
}
/*.produceList{*/
	/*list-style: none;*/
	/*padding: 0;*/
/*}*/
/*.produceList li {*/
	/*background-color: #fff;*/
	/*display: block;*/
	/*float: left;*/
/*}*/
/*.produce-card {*/
	/*width: 200px;*/
/*}*/
#produce-container{
	background-color: #fff;
	margin-bottom: 1rem;
	padding: 1rem;
}
.produceList{
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
}
/*Do something like this for mobile version*/
/*.produce-card{*/
	/*width:100px;*/
/*}*/
.produce-card{
	width:20%;
	padding: 1rem;
	border: none;
}
.produce-card .card-title{
	/*background-color: rgba(18, 13, 8, 0.5);*/
	background-color: rgba(255,248,242, 0.9);
	color: #120d08 ;
	position: absolute;
	bottom: 0;
	left: 0;
	margin: 0 auto;
	padding: 0.5rem 0;
	width: 100%;
	text-align: center;
	text-transform: capitalize;
}
.card-img-overlay {
	position: absolute;
	top: 0;
	right: 0;
	bottom: 10%;
	left: 0;
	padding: 1.25rem;
	width: 80%;
	margin: 0 auto;
}
.selected{
	border: 3px solid blue;
}
.alert{
	margin: 1rem;
}
#searchRecipesBtn{
	/*margin-left: 1rem;*/
}
#recipe-container{
	background-color: #fff;
	padding: 1rem;
	margin-bottom: 1rem;
}
.recipe-card{
	width: 18rem;
}
.recipe-card .badge{
	margin-right: 0.25rem;
}
footer{
	background-color: #fff;
}

